8223015: Cleanups for zipfs tests
Reviewed-by: redestad, lancea